# sincity

./: .gitignore  AStyle.sh  INFO.txt  Makefile.am  TODO.txt  certificate.pfx  config.json  configure.ac  main.cc  pluginDirectShow.vcproj  pluginDirectShow_2013.vcxproj  pluginDirectShow_2013.vcxproj.filters  pluginWinDD_2013.vcxproj  pluginWinDD_2013.vcxproj.filters  pluginWinMF.vcproj  pluginWinMF_2013.vcxproj  pluginWinMF_2013.vcxproj.filters  tinyBFCP.vcproj  tinyBFCP_2013.vcxproj  tinyDAV.vcproj  tinyDAV_2013.vcxproj  tinyDAV_2013.vcxproj.filters  tinyHTTP.vcproj  tinyHTTP_2013.vcxproj  tinyHTTP_2013.vcxproj.filters  tinyHTT_2013.vcxproj.filters  tinyIPSec.vcproj  tinyIPSec_2013.vcxproj  tinyIPSec_2013.vcxproj.filters  tinyMEDIA.vcproj  tinyMEDIA_2013.vcxproj  tinyMEDIA_2013.vcxproj.filters  tinyMSRP.vcproj  tinyMSRP_2013.vcxproj  tinyNET.vcproj  tinyNET_2013.vcxproj  tinyNET_2013.vcxproj.filters  tinyRTP.vcproj  tinyRTP_2013.vcxproj  tinyRTP_2013.vcxproj.filters  (+6 more)
apple/Sincity/: Sincity.h  sc_annotation.mm  sc_annotation_circle.h  sc_annotation_circle.mm  sc_annotation_freehand.mm  sc_annotation_text.mm  sc_camera_ios.mm  sc_display_osx.mm  sc_producer_video_ios.h
doxygen/: Doxyfile  DoxygenLayout.xml  sincity.tag
html/: adapter.js  docgen.index.html  index.html  release.sh  sincity.js  test.htm  test_server.htm
html/release/: adapter.js  index.html  test_client.htm
iOS/SinTest/SinTest/: AppDelegate.h  Info.plist  ViewController.h  ViewController.m
iOS/SinTest/SinTest.xcodeproj/: project.pbxproj
iOS/SinTestSwift/SinTestSwift/: AppDelegate.swift  Info.plist  SinTestSwift-Bridging-Header.h  ViewController.swift
iOS/SinTestSwift/SinTestSwift.xcodeproj/: project.pbxproj
iOS/SinTestSwift/SinTestSwiftTests/: Info.plist  SinTestSwiftTests.swift
sincity/: Makefile.am  configure.ac  libsincity.pc.in  ragel.sh  sincity.vcproj  sincity_2013.vcxproj  sincity_2013.vcxproj.filters
sincity/include/: sc_config.h
sincity/include/sincity/: sc_api.h  (+19 more)
sincity/ragel/: sc_parser_url.rl
sincity/src/: sc_annotation.mm  sc_annotation_arrow.mm  sc_annotation_freehand.mm  sc_annotation_text.mm  sc_api_objc.mm  sc_camera_ios.mm  sc_display_fake.cc  sc_display_osx.mm  sc_engine.cc  sc_glview_ios.mm  sc_jsoncpp.cc  sc_mutex.cc  sc_nettransport.cc  sc_nettransport_ws.cc  sc_parser_url.cc  sc_producer_video_ios.mm  sc_session.cc  sc_session_call.cc  sc_signaling.cc  sc_thread.cc  sc_url.cc  sc_utils.cc  sc_wec7.c  sc_wec7_time.c
trunk/: Makefile.am  TODO.txt  config.json  configure.ac  main.cc  pluginDirectShow.vcproj  pluginDirectShow_2013.vcxproj  pluginWinDD_2013.vcxproj  pluginWinDD_2013.vcxproj.filters  pluginWinMF_2013.vcxproj  pluginWinMF_2013.vcxproj.filters  self-signed-certs.sh  tinyBFCP.vcproj  tinyBFCP_2013.vcxproj  tinyBFCP_2013.vcxproj.filters  tinyDAV.vcproj  tinyDAV_2013.vcxproj  tinyHTTP.vcproj  tinyHTTP_2013.vcxproj  tinyHTT_2013.vcxproj  tinyIPSec.vcproj  tinyIPSec_2013.vcxproj.filters  tinyMEDIA.vcproj  tinyMEDIA_2013.vcxproj  tinyMEDIA_2013.vcxproj.filters  tinyMSRP.vcproj  tinyMSRP_2013.vcxproj  tinyMSRP_2013.vcxproj.filters  tinyNET.vcproj  tinyNET_2013.vcxproj  tinyRTP.vcproj  tinyRTP_2013.vcxproj  tinySAK.vcproj  tinySAK_2013.vcxproj  tinySDP.vcproj  tinySDP_2013.vcxproj
trunk/doxygen/: index.doxy  sincity.tag
trunk/html/: docgen.sh  index.html  sincity.js  test.htm
trunk/sincity/: Makefile.am  configure.ac  libsincity.pc.in  sincity.vcproj  sincity_2013.vcxproj  sincity_2013.vcxproj.filters
trunk/sincity/include/: sc_config.h
trunk/sincity/include/sincity/: sc_annotation_arrow.h  sc_annotation_text.h  sc_api.h  sc_api_objc.h  sc_common.h  sc_engine.h  sc_nettransport.h  sc_nettransport_ws.h  sc_obj.h  sc_parser_url.h  sc_session.h  sc_session_call.h  sc_signaling.h  sc_thread.h  sc_url.h  sc_utils.h
trunk/sincity/ragel/: sc_machine_utils.rl  sc_parser_url.rl
trunk/sincity/src/: sc_annotation.mm  sc_annotation_arrow.mm  sc_annotation_circle.mm  sc_annotation_text.mm  sc_api_objc.mm  sc_display_fake.cc  sc_display_osx.mm  sc_engine.cc  sc_mutex.cc  sc_nettransport.cc  sc_nettransport_ws.cc  sc_obj.cc  sc_parser_url.cc  sc_producer_video_ios.mm  sc_session.cc  sc_session_call.cc  sc_signaling.cc  sc_thread.cc  sc_utils.cc  sc_wec7.c
trunk/wec7/: wec7.sln  wec7.vcproj
trunk/wes8/: wes8.vcproj  wes8_2013.sln  wes8_2013.vcxproj
trunk/win32/: win32.cc  win32.sln  win32.vcproj  win32_2013.sln
wec7/: wec7.sln  wec7.vcproj
wec7/PoC/: PoC.cc  PoC.rc  PoC.rc2  PoC.vcproj  resource.h  stdafx.cc
wec7/PoC_cab/: PoC_cab.vdproj
wec7/cpu/: cpu.cpp
wes8/: wes8.sln  wes8.vcproj  wes8_2013.sln  wes8_2013.vcxproj  wes8_2013.vcxproj.filters
win32/: stdafx.h  targetver.h  win32.cc  win32.sln  win32.vcproj  win32_2013.sln  win32_2013.vcxproj  win32_2013.vcxproj.filters
(+126 files in other folders)
